--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
 
         <img src="images/splash_image.png" alt="Decorative game graphic" id="ingame-placeholder-image">
     </div>
+<!DOCTYPE html>
+<audio id="background-audio" loop>
+    <source src="audio/waves_loop.mp3" type="audio/mpeg">
+    </audio>
 
+<script type="module" src="js/main.js"></script>
+</html>
+<div id="debug-panel">
+        <h4>DEBUG INFO</h4>
+        <div>Time Elapsed: <span id="debug-time">0.0</span> / 48.0</div>
+        <div>Exodus Occurred: <span id="debug-exodus">false</span></div>
+        <div>Mel Knows Deadline: <span id="debug-mel-knows">false</span></div>
+    </div>
+
+    <script type="module" src="js/main.js"></script>
+</body>
+</html>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
